--- a/App/css/style.css
+++ b/App/css/style.css
@@ -16,19 +16,14 @@ section {
 
 .hidden {
 	opacity: 1;
-	/* filter: blur(5px);
-	transform: translateX(100%); */
-	transition: all 2s;
+	filter: blur(0px);
+	/* transform: translateX(1%); */
+	transition: all 0.5s;
 }
 
-/*@media(prefers-reduced-motion) {
-	.hidden{
-		transition: none;
-	}
-}*/
 
 .show {
-	opacity: 1;
-	/* filter: blur(0);
-	transform: translateX(0); */
+	opacity: 0;
+	filter: blur(5px);
+	transform: translateX(0%);
 }
