--- a/Homepage.css
+++ b/Homepage.css
@@ -1,3 +1,14 @@
+html
+{
+  height: 100%;
+}
+body
+{
+  height: 100%;
+  margin: 0;
+  padding: 0;
+}
+
 header
 {
   padding: 0 1em;
@@ -17,10 +28,39 @@ header h1 span
 {
     color: #FFC72C;
 }
-button
+button#navbut
 {
   width: 10%;
   height: 30%;
+}
+button#log
+{
+ 
+  border:none; 
+  border-radius:10px; 
+  box-shadow: 0px 0px 2px 2px rgb(0,0,0); 
+  color: #FFC72C;
+  background-color: #003594;
+  width: 10%;
+  height: 5%;
+}
+body#loginbody
+{
+  background: #fff;
+    color: #1c1e21;
+    direction: ltr;
+    line-height: 1.34;
+    margin: 0;
+    padding: 0;
+    unicode-bidi: embed;
+    display: block;
+}
+#form
+{ 
+  display: inline;
+  text-align: center;
+  margin: 0;
+  padding: 0 16px;
 }
 
 .container
@@ -36,7 +76,7 @@ button
   position: fixed;
   z-index: 1;
   top: 0;
-  left: 0;
+  right: 0;
   background-color: #111;
   overflow-x: hidden;
   transition: 0.5s;
@@ -63,6 +103,13 @@ button
   font-size: 36px;
   margin-left: 50px;
 }
+
+#map
+{
+  height: 50%;
+  width:100%;
+
+}
 /* styles for mobile protrait screen */
 @media only screen and (max-width:480px)
 {
@@ -77,6 +124,4 @@ button
 {
   header {font-size: 10px;}
   header {height: 9em;}
-
-
 }
