--- a/Homepage.css
+++ b/Homepage.css
@@ -1,16 +1,15 @@
-html
-{
+html{
   height: 100%;
 }
-body
-{
+body{
   height: 100%;
   margin: 0;
   padding: 0;
 }
 
-header
-{
+/************* HEADER STYLING ***************/
+
+header{
   padding: 0 1em;
   background-color: #003594;
   height: 8em;
@@ -18,24 +17,24 @@ header
   align-items: center;
   justify-content: space-between;
 }
-header h1
-{
-    margin: 0;
-    font-size: 300%;
+header h1{
+  margin: 0;
+  font-size: 300%;
 
 }
-header h1 span
-{
-    color: #FFC72C;
+header h1 span{
+  color: #FFC72C;
 }
-button#navbut
-{
+
+/*************** END OF HEADER STYLING**************/
+
+/*************** BEGINNING OF NAVBAR STYLING **************/
+
+button#navbut{
   width: 10%;
   height: 30%;
 }
-button#log
-{
- 
+button#log{
   border:none; 
   border-radius:10px; 
   box-shadow: 0px 0px 2px 2px rgb(0,0,0); 
@@ -44,33 +43,22 @@ button#log
   width: 10%;
   height: 5%;
 }
-body#loginbody
-{
+body#loginbody{
   background: #fff;
-    color: #1c1e21;
-    direction: ltr;
-    line-height: 1.34;
-    margin: 0;
-    padding: 0;
-    unicode-bidi: embed;
-    display: block;
-}
-#form
-{ 
-  display: inline;
-  text-align: center;
+  color: #1c1e21;
+  direction: ltr;
+  line-height: 1.34;
   margin: 0;
-  padding: 0 16px;
+  padding: 0;
+  unicode-bidi: embed;
+  display: block;
 }
-
-.container
-{
+.container{
   display: flex;
   align-items: center;
   justify-content: center;
-
 }
-.sideNav {
+.sideNav{
   height: 100%;
   width: 0;
   position: fixed;
@@ -82,8 +70,7 @@ body#loginbody
   transition: 0.5s;
   padding-top: 60px;
 }
-
-.sideNav a {
+.sideNav a{
   padding: 8px 8px 8px 32px;
   text-decoration: none;
   font-size: 25px;
@@ -91,37 +78,62 @@ body#loginbody
   display: block;
   transition: 0.3s;
 }
-
-.sideNav a:hover {
+.sideNav a:hover{
   color: #f1f1f1;
 }
-
-.sideNav .closeBtn {
+.sideNav .closeBtn{
   position: absolute;
   top: 0;
   right: 25px;
   font-size: 36px;
   margin-left: 50px;
 }
+/*************** END OF NAVBAR STYLING*******************/
 
-#map
-{
+/*************** BEGINNING OF FORM STYLING*******************/
+
+#form{ 
+  display: inline;
+  text-align: center;
+  margin: 0;
+  padding: 0 16px;
+}
+
+/*************** END OF FORM STYLING*******************/
+
+/************** BEGINNING OF MAP STYLING ***************/
+#map{
   height: 50%;
   width:100%;
-
 }
-/* styles for mobile protrait screen */
-@media only screen and (max-width:480px)
-{
+.control-button {
+  background-color: #fff;
+  border: 0;
+  border-radius: 2px;
+  box-shadow: 0 1px 4px -1px rgba(0, 0, 0, 0.3);
+  margin: 10px;
+  padding: 0 0.5em;
+  font: 400 18px Roboto, Arial, sans-serif;
+  overflow: hidden;
+  height: 40px;
+  cursor: pointer;
+}
+.control-button:hover {
+  background: rgb(235, 235, 235);
+}
 
+/*************** END OF MAP STYLING*******************/
+
+/* styles for mobile protrait screen */
+@media only screen and (max-width:480px){
   header {font-size: 10px;}
   header {height: 8em;}
   .sidenav {padding-top: 15px;}
   .sidenav a {font-size: 18px;}
 }
+
 /* styles for tablet portrait and mobile landscape screens */
-@media only screen and (min-width: 481px) and (max-width: 768px)
-{
+@media only screen and (min-width: 481px) and (max-width: 768px){
   header {font-size: 10px;}
   header {height: 9em;}
 }
