--- a/usrReg.css
+++ b/usrReg.css
@@ -37,6 +37,7 @@
   border-radius: 10px;
   border: 2px solid #3154A3;
   padding: 5px; 
+  height: 25px;
 }
 .lnks
 {
@@ -115,6 +116,22 @@ label {
   width: 140px;
   text-align: Left;
 }
+
+.container {
+  position: fixed;
+  left: 1%;
+  top: 15%;
+  height: 50%;
+  width:  50%;
+}
+.c2 {
+  position: fixed;
+  left: 70%;
+  top: 15%;
+  height: 74%;
+  width:  27%;
+}
+
 .button {
   background-color: #3154A3;
   border: none;
