--- a/usrReg.css
+++ b/usrReg.css
@@ -1,37 +1,4 @@
 
-.topnav {
-  background-color: #3154A3;
-  padding-top: 5rem;
-  overflow: hidden;
-}
-
-
-.topnav a {
-  float: left;
-  color: white;
-  text-align: center;
-  padding: 14px 16px;
-  text-decoration: none;
-  font-size: 17px;
-}
-.material-symbols-outlined {
-  font-variation-settings:
-  'FILL' 0,
-  'wght' 400,
-  'GRAD' 0,
-  'opsz' 48
-}
-/* Change the color of links on hover */
-.topnav a:hover {
-  background-color: #ddd;
-  color: black;
-}
-
-/* Add a color to the active/current link */
-.topnav a.active {
-  background-color: #FDB913;
-  color: black;
-}
 .rcorners
 {
   border-radius: 10px;
@@ -39,77 +6,15 @@
   padding: 5px; 
   height: 25px;
 }
-.lnks
-{
-  border-radius: 10px;
-  border: 2px solid #3154A3;
-  padding: 5px;
-  background-color: black; 
-}
-.m1 {
-  position: fixed;
-  transform: translateY(-120%);
-  transition: transform 0.2s;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  z-index: 99;
 
-  color: white;
-  list-style: none;
-  padding-right: 2rem;
-
-}
-.ham {
-  position: fixed;
-  z-index: 100;
-  top: 1rem;
-  right: 1rem;
-  padding: 4px;
-  border: black solid 1px;
-  background: white;
-  cursor: pointer;
-}
-.m2 {
-  display: block;
-  font-size: 1.8rem;
-  color: white;
-  text-decoration: none;
-
-}
-
-.m2:hover {
-  text-decoration: underline;
-}
-.closeIcon {
-  display: none;
-}
-.showMenu {
-  transform: translateY(0);
-}
-
-input[type=submit] {
-  width: 100%;
-  background-color: #4CAF50;
-  color: white;
-  padding: 14px 20px;
-  margin: 8px 0;
-  border: none;
-  border-radius: 4px;
-  cursor: pointer;
-}
-
-input[type=submit]:hover {
-  background-color: #45a049;
-}
 
 div {
   border-radius: 5px;
   background-color: #f2f2f2;
-  padding: 20px;
+  /*padding: 15px;*/
   text-align: center;
 }
+
 
 label {
   display: inline-block;
@@ -117,41 +22,18 @@ label {
   text-align: Left;
 }
 
-.container {
+.containerx {
   position: fixed;
   left: 1%;
   top: 15%;
   height: 50%;
   width:  50%;
 }
+
 .c2 {
   position: fixed;
   left: 70%;
   top: 15%;
   height: 74%;
   width:  27%;
-}
-
-.button {
-  background-color: #3154A3;
-  border: none;
-  color: white;
-  padding: 15px 32px;
-  text-align: center;
-  text-decoration: none;
-  display: inline-block;
-  font-size: 16px;
-  margin: 4px 2px;
-  cursor: pointer;
-  -webkit-transition-duration: 0.4s; /* Safari */
-  transition-duration: 0.4s;
-}
-.button2:hover {
-  box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24),0 17px 50px 0 rgba(0,0,0,0.19);
-}
-.hnav{
-  text-align: right;
-  font-size: 45px;
-  color: black;
-
 }
