Got health related articles to appear and very basic formatting now i just to make it appear a little nicer and further limit what type of article appear. As it is now all health related articles appear this includes celebrities health and things such as that. Finally recommitting the files for the about-us page. We could potentially use that page to showcase our mission, goals, and team members for our project during the expo

--- a/App/css/article.css
+++ b/App/css/article.css
@@ -1,5 +1,5 @@
 /* need to immport the same font being used throughout the ramrod website */
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200:400:700&display=swap');
+/* @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200:400:700&display=swap'); */
 body {
 	background-color: rgb(252, 252, 252);
 	color: #000000;
@@ -19,6 +19,21 @@ form {
 	padding: 1%;
 	display: inline-flex;
 	background-color: rgb(250,199,44);
+}
+	/* Add some basic styles for the articles */
+.article {
+	border: 1px solid #ccc;
+	padding: 10px;
+	margin-bottom: 10px;
+	display: flex;
+	flex-direction: row;
+	align-items: center;
+}
+
+.article img {
+	max-width: 100px;
+	max-height: 100px;
+	margin-right: 10px;
 }
 /* Commenting things i do not need rn but will most likely still need as the article page progress and i 
 develop a better understanding of adjust the infomration being retrieved */
