--- a/App/css/article.css
+++ b/App/css/article.css
@@ -8,11 +8,6 @@ body {
 	margin: 0;
 }
 
-form {
-	float: right;
-
-/*	align-content: right;*/
-}
 .search_bar {
 	float: right;
 	border: 1px rgb(250,199,44);
@@ -20,20 +15,21 @@ form {
 	display: inline-flex;
 	background-color: rgb(250,199,44);
 }
-	/* Add some basic styles for the articles */
+
+/* Add some basic styling for the articles */
 .article {
-	border: 1px solid #ccc;
-	padding: 10px;
-	margin-bottom: 10px;
+	border: 1px solid #000000;
+	padding: 1%;
+	margin-bottom: 1%;
 	display: flex;
 	flex-direction: row;
 	align-items: center;
 }
 
 .article img {
-	max-width: 100px;
-	max-height: 100px;
-	margin-right: 10px;
+	max-width: 10%;
+	max-height: 10%;
+	margin-right: 1%;
 }
 /* Commenting things i do not need rn but will most likely still need as the article page progress and i 
 develop a better understanding of adjust the infomration being retrieved */
@@ -45,32 +41,8 @@ develop a better understanding of adjust the infomration being retrieved */
 	grid-auto-rows: minmax(100px, auto);
 
 	align-items: end;
-
-
 } */
 /* 
-.rounded-image {
-	border-radius: 50% 50%;
-	width: 200px;
-	height: 200px;
-	border: 5px salmon;
-	border-radius: 5px;
-}
-
-.one {
-	grid-column: 1;
-	grid-row: 2;
-	border:2px solid black;
-	border-radius: 5px;
-}
-
-.two {
-	grid-column: 2;
-	grid-row: 2;
-	border:2px solid black;
-	border-radius: 5px;
-} */
-
 /* .card {
 	border: 1px rgb(250,199,44);
 	padding: 1%;
@@ -81,9 +53,3 @@ develop a better understanding of adjust the infomration being retrieved */
 	border-radius: 5px;
 } */
 /* 
-section {
-	display: grid;
-	place-items: center;
-	align-content: center;
-	min-height: 30vh;
-} 
