header color scheme changed

--- a/App/css/header.css
+++ b/App/css/header.css
@@ -64,7 +64,7 @@ header{
     z-index: 1;
     top: 0;
     right: 0;
-    background-color: #111;
+    background-color: rgb(2, 2, 58);
     overflow-x: hidden;
     transition: 0.5s;
     padding-top: 60px;
@@ -73,12 +73,12 @@ header{
     padding: 8px 8px 8px 32px;
     text-decoration: none;
     font-size: 25px;
-    color: #818181;
+    color: white;
     display: block;
     transition: 0.3s;
   }
   .sideNav a:hover{
-    color: #f1f1f1;
+    color: yellow;
   }
   .sideNav .closeBtn{
     position: absolute;
