--- a/App/css/article.css
+++ b/App/css/article.css
@@ -8,22 +8,59 @@ body {
 	margin: 0;
 }
 
-.search_bar {
-	float: right;
-	border: 1px rgb(250,199,44);
-	padding: 1%;
-	display: inline-flex;
-	background-color: rgb(250,199,44);
-}
-
+.search-wrapper {
+	display: flex;
+	flex-direction: column;
+	gap: .25rem;
+  }
+  
+  input {
+	font-size: 1rem;
+  }
+  
+  .user-cards {
+	display: grid;
+	grid-template-columns: repeat(auto-fill, minmax(150px, 1fr));
+	gap: .25rem;
+	margin-top: 1rem;
+  }
+  
+  .card {
+	border: 1px solid black;
+	background-color: white;
+	padding: .5rem;
+  }
+  
+  .card > .header {
+	margin-bottom: .25rem;
+  }
+  
+  .card > .body {
+	font-size: .8rem;
+	color: #777;
+  }
+  
+  .hide {
+	display: none;
+  }
 /* Add some basic styling for the articles */
-.article {
+/* .cards{
+	display: grid;
+	grid-template-columns: repeat(auto-fill, minmax(400px, 1fr));
+	margin-top: 1rem;
+} */
+
+/* .article {
 	border: 1px solid #000000;
+	display: flex;
 	padding: 1%;
 	margin-bottom: 1%;
-	display: flex;
 	flex-direction: row;
 	align-items: center;
+}
+
+.article div {
+	color: black;
 }
 
 .article img {
@@ -33,25 +70,7 @@ body {
 	margin-right: 1%;
 	border: 1px solid black;
 }
-/* Commenting things i do not need rn but will most likely still need as the article page progress and i 
-develop a better understanding of adjust the infomration being retrieved */
-/* .cards{
-	display: grid;
-	grid-template-columns: repeat(3, 1fr);
-	gap: 10px;
-	height: 25%;
-	grid-auto-rows: minmax(100px, auto);
 
-	align-items: end;
+.hide {
+	display: none;
 } */
-/* 
-/* .card {
-	border: 1px rgb(250,199,44);
-	padding: 1%;
-	background-color: rgb(250, 199, 44);
-} */
-/* .card-body {
-	border: 2px solid black;
-	border-radius: 5px;
-} */
-/* 
