--- a/App/css/jquery_test.css
+++ b/App/css/jquery_test.css
@@ -27,5 +27,41 @@
 #myButton.clicked {
   background-color: green;
   color: white;
+  border-color: #e1e3e2;
+
 }
 
+.contain{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  list-style: none;
+  margin: 0;
+  padding: 0;
+  font-family: Arial, sans-serif;
+}
+h2 {
+  font-size: 12px;
+  font-weight: bold;
+  text-transform: uppercase;
+  color: green;
+  letter-spacing: 2px;
+  text-shadow: 2px 2px 0px rgba(0,0,0,0.1);
+  margin-bottom: 20px;
+  text-align: center;
+}
+@media screen and (min-width: 768px) {
+  .contain {
+    max-width: 800px;
+    margin: 0 auto;
+  }
+}
+
+.contain-bkg {
+  box-shadow: 0px 2px 10px rgba(0,0,0,0.2);
+  border-radius: 10px;
+  border: solid;
+  background-color: #e1e3e2;
+  padding: 20px;
+}
