--- a/App/css/userProfile.css
+++ b/App/css/userProfile.css
@@ -1,4 +1,38 @@
-.userCSS  {
-	background-color: blue;
-	color: white;
+
+
+.hist {
+    float:left;
+    width:25%;
+    height:280px;
 }
+.alleg{
+    float:left;
+    width:50%;
+    height:280px;
+}
+.meds{
+    float:right;
+    width:25%;
+    height:280px;
+}
+
+
+#user-hist li, #user-allerg li, #user-meds li {
+    padding: 10px;
+    border-radius: 5px;
+    background-color: #fff;
+    box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
+    transition: all 0.3s ease-in-out;
+    list-style: none;
+}
+
+#user-hist li:hover, #user-allerg li:hover, #user-meds li:hover {
+    transform: translateY(-5px);
+    box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
+}
+
+.fa {
+    margin-right: 5px;
+    font-size: 16px;
+}
+
