--- a/App/css/article.css
+++ b/App/css/article.css
@@ -1,76 +1,30 @@
-/* need to immport the same font being used throughout the ramrod website */
-/* @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200:400:700&display=swap'); */
-body {
-	background-color: rgb(252, 252, 252);
-	color: #000000;
-	font-family: 'Poppins', sans-serif;
-	padding: 0;
-	margin: 0;
+.search_bar {
+	float: right;
+	border: 1px rgb(250,199,44);
+	padding: 1%;
+	display: inline-flex;
+	background-color: rgb(250,199,44);
 }
 
-.search-wrapper {
-	display: flex;
-	flex-direction: column;
-	gap: .25rem;
-  }
-  
-  input {
-	font-size: 1rem;
-  }
-  
-  .user-cards {
-	display: grid;
-	grid-template-columns: repeat(auto-fill, minmax(150px, 1fr));
-	gap: .25rem;
-	margin-top: 1rem;
-  }
-  
-  .card {
-	border: 1px solid black;
-	background-color: white;
-	padding: .5rem;
-  }
-  
-  .card > .header {
-	margin-bottom: .25rem;
-  }
-  
-  .card > .body {
-	font-size: .8rem;
-	color: #777;
-  }
-  
-  .hide {
-	display: none;
-  }
 /* Add some basic styling for the articles */
-/* .cards{
-	display: grid;
-	grid-template-columns: repeat(auto-fill, minmax(400px, 1fr));
-	margin-top: 1rem;
-} */
-
-/* .article {
+.article {
 	border: 1px solid #000000;
-	display: flex;
 	padding: 1%;
 	margin-bottom: 1%;
+	display: flex;
 	flex-direction: row;
 	align-items: center;
 }
 
-.article div {
-	color: black;
-}
-
 .article img {
-	border-radius: 5px 5px 5px 5px;
-	max-width: 10%;
-	max-height: 10%;
+	max-width: 20%;
+	max-height: 20%;
 	margin-right: 1%;
-	border: 1px solid black;
 }
-
-.hide {
-	display: none;
-} */
+#myInput {
+    padding: 20px;
+    margin-top: -6px;
+    border: 0;
+    border-radius: 0;
+    background: #f1f1f1;
+}
