--- a/App/css/article.css
+++ b/App/css/article.css
@@ -1,10 +1,3 @@
-.search_bar {
-	float: right;
-	border: 1px rgb(250,199,44);
-	padding: 1%;
-	display: inline-flex;
-	background-color: rgb(250,199,44);
-}
 
 /* Add some basic styling for the articles */
 .article {
@@ -21,10 +14,10 @@
 	max-height: 20%;
 	margin-right: 1%;
 }
-#myInput {
+.mySelect {
     padding: 20px;
     margin-top: -6px;
     border: 0;
     border-radius: 0;
-    background: #f1f1f1;
+    background: #ffffff;
 }
