--- a/App/css/header.css
+++ b/App/css/header.css
@@ -15,6 +15,7 @@ header{
     display: flex;
     align-items: center;
     justify-content: space-between;
+    margin-bottom: 1%;
   }
   header h1{
     margin: 0;
