fixed allergy styling and moved display_medications, and display_medical_problems into the display_allergies php file so all of our displays are on one page can delete display_medications, and display_medications

--- a/App/css/display_allergies.css
+++ b/App/css/display_allergies.css
@@ -59,6 +59,7 @@
   cursor: pointer;
   float: left;
   transition: background-color 0.3s ease, color 0.3s ease;
+  display: block;
 }
 
 #medBtn:hover {
@@ -77,8 +78,14 @@
   text-transform: uppercase;
   letter-spacing: 2px;
   cursor: pointer;
-  float: left;
   transition: background-color 0.3s ease, color 0.3s ease;
+  display: block;
+}
+
+.btn-contain{
+  display: flex;
+  flex-direction: column;
+  align-items: center; 
 }
 
 #profBtn:hover {
@@ -87,8 +94,10 @@
 }
 
 
-.btn-group button{
-  float: left;
+.btn-group{
+  display: flex;
+  flex-direction: column;
+  align-items: center; 
 }
 
 #myButton.clicked {
@@ -103,10 +112,8 @@ h1 {
   text-align: center;
 }
 
-
 .contain{
   display: flex;
-  flex-direction: column;
   justify-content: center;
   align-items: center;
   list-style: none;
@@ -114,6 +121,7 @@ h1 {
   padding: 0;
   font-family: Arial, sans-serif;
 }
+
 h2 {
   font-size: 12px;
   font-weight: bold;
@@ -135,7 +143,34 @@ h2 {
   box-shadow: 0px 2px 10px rgba(0,0,0,0.2);
   border-radius: 10px;
   border: solid;
-  background-color: #e1e3e2;
+  background-color: white;
   padding: 20px;
   border-color: darkblue;
+}
+
+
+#med-probs {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
+
+#med-probs li {
+  margin-bottom: 10px;
+}
+
+#med-probs li button {
+  display: block;
+  padding: 5px;
+  background-color: transparent;
+  border-radius: 5px;
+  border-color: black;
+  color: #333;
+  text-decoration: none;
+  width: 200px;
+}
+
+#med-probs li button:hover {
+  background-color: green;
+  color: #fff;
 }
