--- a/App/css/display_allergies.css
+++ b/App/css/display_allergies.css
@@ -86,6 +86,7 @@
   display: flex;
   flex-direction: column;
   align-items: center; 
+
 }
 
 #profBtn:hover {
@@ -98,6 +99,8 @@
   display: flex;
   flex-direction: column;
   align-items: center; 
+
+
 }
 
 #myButton.clicked {
@@ -120,6 +123,7 @@ h1 {
   margin: 0;
   padding: 0;
   font-family: Arial, sans-serif;
+
 }
 
 h2 {
@@ -132,20 +136,17 @@ h2 {
   margin-bottom: 20px;
   text-align: center;
 }
-@media screen and (min-width: 768px) {
-  .contain {
-    max-width: 800px;
-    margin: 0 auto;
-  }
-}
+
 
 .contain-bkg {
   box-shadow: 0px 2px 10px rgba(0,0,0,0.2);
   border-radius: 10px;
   border: solid;
   background-color: white;
-  padding: 20px;
+  padding: 10px;
   border-color: darkblue;
+  height: 60%;
+
 }
 
 
@@ -153,6 +154,7 @@ h2 {
   list-style: none;
   padding: 0;
   margin: 0;
+
 }
 
 #med-probs li {
@@ -173,4 +175,65 @@ h2 {
 #med-probs li button:hover {
   background-color: green;
   color: #fff;
+}
+#med-list {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+
+}
+
+#med-list li {
+  margin-bottom: 10px;
+}
+
+#med-list li button {
+  display: block;
+  padding: 5px;
+  background-color: transparent;
+  border-radius: 5px;
+  border-color: black;
+  color: #333;
+  text-decoration: none;
+  width: 200px;
+}
+
+#med-list li button:hover {
+  background-color: green;
+  color: #fff;
+}
+.overflow-scroll{
+  max-height: 40%;
+  margin-top: 90%;
+
+
+}
+#style-7::-webkit-scrollbar-track
+{
+  visibility: hidden;
+
+}
+
+#style-7::-webkit-scrollbar
+{
+  visibility: hidden;
+
+}
+#style-7::-webkit-scrollbar-thumb
+{
+  border-radius: 100vh;
+  background-color: hsl(194, 96%, 53%);
+
+}
+
+@media(max-width: 980px) {
+  #med-probs li button {
+    width: 95%;
+  }
+  #med-list li button {
+    width: 95%;
+  }
+  #allergy-list li button {
+    width: 95%;
+  }
 }
