--- a/App/css/footer.css
+++ b/App/css/footer.css
@@ -1,15 +1,16 @@
 footer{
-    /* background-color: #003594;
-    color: #FFC72C; */
-    padding: 0 1em;
+    
     margin-top: 1%;
     background-color: #003594;
     color: #FFC72C;
     height: 2em;
+    width: 100%;
     display: flex;
     align-items: center;
-    bottom: 0;
-    justify-content: space-between;
+    justify-content: space-around;
+    position: fixed;
+    bottom: 0px; 
+    padding: 0 1em; 
 }
 
 a{
