Articles display without a filter being selected and images are more mobile friendly

--- a/App/css/article.css
+++ b/App/css/article.css
@@ -21,3 +21,12 @@
     border-radius: 0;
     background: #ffffff;
 }
+/* For smaller screens, such as phones */
+@media (max-width: 768px) {
+  .article img {
+    max-width: 50%;
+    max-height: 50%;
+    margin-right: 0.5em;
+    align-items: top;
+  }
+}
