--- a/App/css/display_allergies.css
+++ b/App/css/display_allergies.css
@@ -4,6 +4,7 @@
   margin: 0;
 }
 
+/*The whole list that contains the allergies*/
 #allergy-list li {
   margin-bottom: 10px;
 }
@@ -67,7 +68,7 @@
   color: white;
 }
 
-#profBtn {
+/*#profBtn {
   background-color: transparent;
   border-color: black;
   border-radius: 50px;
@@ -92,7 +93,7 @@
 #profBtn:hover {
   background-color: black;
   color: white;
-}
+}*/
 
 
 .btn-group{
@@ -115,7 +116,7 @@ h1 {
   text-align: center;
 }
 
-.contain{
+/*.contain{
   display: flex;
   justify-content: center;
   align-items: center;
@@ -124,7 +125,7 @@ h1 {
   padding: 0;
   font-family: Arial, sans-serif;
 
-}
+}*/
 
 h2 {
   font-size: 12px;
@@ -138,7 +139,7 @@ h2 {
 }
 
 
-.contain-bkg {
+/*.contain-bkg {
   box-shadow: 0px 2px 10px rgba(0,0,0,0.2);
   border-radius: 10px;
   border: solid;
@@ -147,9 +148,9 @@ h2 {
   border-color: darkblue;
   height: 60%;
 
-}
+}*/
 
-
+/*Med probs gets used to add medical problems*/
 #med-probs {
   list-style: none;
   padding: 0;
@@ -175,6 +176,8 @@ h2 {
   background-color: green;
   color: #fff;
 }
+
+/*Med-list gets used to style the current medications*/
 #med-list {
   list-style: none;
   padding: 0;
@@ -226,12 +229,15 @@ h2 {
 }
 
 @media(max-width: 980px) {
+/* add medical history */
   #med-probs li button {
     width: 95%;
   }
+/*add current medications*/
   #med-list li button {
     width: 95%;
   }
+/*add allergies*/
   #allergy-list li button {
     width: 95%;
   }
