--- a/App/css/header.css
+++ b/App/css/header.css
@@ -5,6 +5,7 @@ html{
     height: 100%;
     margin: 0;
     padding: 0;
+      background-image: url(images/bgrnd.jpg);
   }
 /************* HEADER STYLING ***************/
 
