Worked on the style for the user profile page and added davids image still need to do a little more but wanted to save my progress.

--- a/App/css/about.css
+++ b/App/css/about.css
@@ -7,6 +7,10 @@
 	background-color: transparent;
 }
 
+.card{
+	height: 50vh;
+}
+
 .cards{
 
     transition: all 0.2s ease;
@@ -25,4 +29,37 @@
 
 body{
 	background-image: url("../../images/bgrnd.jpg");
+}
+@media screen and (max-width: 997px) {
+
+	.lead{
+		font-size: 17px;
+	}
+
+  .card-img-top{
+	width: 10vh;
+	height: 10vh;
+  }
+}
+@media screen and (max-width: 765px) {
+
+	.lead{
+		font-size: 14px;
+	}
+
+  .card-img-top{
+	width: 10vh;
+	height: 10vh;
+  }
+}
+@media screen and (max-width: 1400px) {
+
+	.lead{
+		font-size: 14px;
+	}
+
+  .card-img-top{
+	width: 10vh;
+	height: 10vh;
+  }
 }
