--- a/App/css/user_profile.css
+++ b/App/css/user_profile.css
@@ -1,4 +1,6 @@
-
+body{
+  background-image: url("../../images/bgrnd.jpg");
+}
 
 .name {
     color: #333;
@@ -65,6 +67,8 @@
     font-size: 0.6rem;
     padding: 3px;
   }
+
+
 }
 
 /*@media (max-width: 980px) {
