--- a/App/css/about.css
+++ b/App/css/about.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200:400:700&display=swap');
+/*@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200:400:700&display=swap');*/
 .card-img-top{
 	width: 15vh;
 	height: 15vh;
