--- a/App/css/user_profile.css
+++ b/App/css/user_profile.css
@@ -31,7 +31,7 @@ body{
   overflow-x: hidden;
 }
 
-@media (max-width: 576px) {
+/*@media (max-width: 576px) {
   .card-body {
     padding: 0.5rem;
   }
@@ -39,9 +39,9 @@ body{
   .card-header {
     font-size: 5px;
   }
-}
+}*/
 
-@media (max-width: 768px) {
+/*@media (max-width: 768px) {
   .card-body {
     font-size: 10px;
     padding: 10px;
@@ -67,10 +67,36 @@ body{
     font-size: 0.6rem;
     padding: 3px;
   }
+}*/
 
+@media (max-width:980px){
+  .card-body {
+    font-size: 10px;
+    padding: 10px;
+    margin: 0;
+  }
+  .card {
+    width: 100%;
+    margin-bottom: 20px;
+  }
 
+  .card-header h2 {
+    font-size: 1.0rem;
+  }
+
+  .card-body {
+    padding: 5px;
+    font-size: 0.8rem;
+  }
+
+  .list-group-item {
+    font-size: 0.8rem;
+    padding: 3px;
+  }
+  .profHead{
+    padding: 0px;
+  }
 }
-
 /*@media (max-width: 980px) {
   .card {
     width: 100%;
