--- a/App/css/article.css
+++ b/App/css/article.css
@@ -1,32 +1,76 @@
-
-/* Add some basic styling for the articles */
-.article {
-	border: 1px solid #000000;
-	padding: 1%;
-	margin-bottom: 1%;
+#articles {
 	display: flex;
-	flex-direction: row;
-	align-items: center;
+	flex-wrap: wrap;
+	justify-content: center;
 }
 
-.article img {
-	max-width: 20%;
-	max-height: 20%;
-	margin-right: 1%;
+/*card that contains all the articles*/
+.card {
+  width: 300px; 
+  height: 400px; 
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  padding: 10px;
+  margin-bottom: 10px;
+  background-color: #fff;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.5);
+  display: flex;
+  flex-direction: column;
+  transition: transform 0.1s ease;
+
 }
-.mySelect {
-    padding: 20px;
-    margin-top: -6px;
-    border: 0;
-    border-radius: 0;
-    background: #ffffff;
+.card-img {
+  width: 100%;
+  height: 200px;
+  object-fit: cover;
+  border-radius: 5px;
+  margin-bottom: 10px;
 }
+.card-title {
+  font-size: 18px;
+  font-weight: bold;
+  margin-bottom: 5px;
+  overflow: hidden;
+  text-overflow: ellipsis;
+/*  white-space: nowrap;*/
+}
+.card-text {
+  font-size: 14px;
+  color: #555;
+  display: -webkit-box;
+  -webkit-line-clamp: 3; /* Number of lines to show */
+  -webkit-box-orient: vertical;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+.btn {
+  display: inline-block;
+  padding: 8px 16px;
+  font-size: 14px;
+  font-weight: bold;
+  text-decoration: none;
+  background-color: lightskyblue;
+/*  color: #fff;*/
+  border-radius: 4px;
+  transition: background-color 0.3s ease;
+}
+
+.btn:hover {
+  background-color: rgb(0,53,148);
+}
+.card:hover,
+.card:focus {
+  transform: scale(1.05);
+  background-color: lightskyblue;
+}
+
+
 /* For smaller screens, such as phones */
-@media (max-width: 980px) {
+/*@media (max-width: 980px) {
   .article img {
     max-width: 50%;
     max-height: 50%;
     margin-right: 0.5em;
     align-items: top;
   }
-}
+}*/
